--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express-graphql": "^0.6.2",
+    "@types/mongodb": "^3.1.17",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "express-jwt": "^5.3.1",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/express-jwt": "0.0.40",
+    "@types/mongoose": "^5.3.5",
     "@types/ws": "^6.0.1",
     "mongoose": "^5.4.0",
     "nodemon": "^1.18.9",
