--- a/frontend/.editorconfig
+++ b/frontend/.editorconfig
@@ -1,13 +1,43 @@
-# Editor configuration, see http://editorconfig.org
+# EditorConfig helps developers define and maintain consistent
+# coding styles between different editors and IDEs
+# editorconfig.org
+
 root = true
 
 [*]
+# Change these settings to your own preference
+indent_style = space
+indent_size = 4
+
+# We recommend you to keep these unchanged
 charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.json]
 indent_style = space
 indent_size = 2
-insert_final_newline = true
-trim_trailing_whitespace = true
+
+[*.html]
+indent_style = space
+indent_size = 2
+
+[*.scss]
+indent_style = space
+indent_size = 2
 
 [*.md]
-max_line_length = off
 trim_trailing_whitespace = false
+
+[*.xml]
+indent_style = space
+indent_size = 4
+
+[*.{yaml,yml}]
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = false
+
+[package.json]
+indent_style = space
+indent_size = 2
