--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,15 +23,16 @@
     "@ngrx/effects": "^6.1.2",
     "@ngrx/store": "^2.2.3",
     "apollo-angular": "^1.5.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
     "apollo-angular-link-http": "^1.3.1",
-    "apollo-link": "^1.2.0",
-    "apollo-client": "^2.4.0",
     "apollo-cache-inmemory": "^1.3.2",
+    "apollo-client": "^2.4.0",
+    "apollo-link": "^1.2.0",
+    "core-js": "^2.5.4",
+    "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
-    "graphql": "^0.13.2"
+    "node-sass": "^4.11.0",
+    "rxjs": "~6.3.3",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
