--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express-graphql": "^0.6.2",
+    "@types/mongodb": "^3.1.17",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "express-jwt": "^5.3.1",
@@ -21,12 +22,14 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/express-jwt": "0.0.40",
+    "@types/mongoose": "^5.3.5",
     "@types/ws": "^6.0.1",
     "mongoose": "^5.4.0",
     "nodemon": "^1.18.9",
     "reflect-metadata": "^0.1.12",
     "tslint": "^5.11.0",
     "type-graphql": "^0.15.0",
+    "typegoose": "^5.4.1",
     "typescript": "^3.2.2"
   }
 }
