--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@auth0/angular-jwt": "^2.1.0",
     "@ngrx/effects": "^6.1.2",
     "@ngrx/store": "^2.2.3",
     "apollo-angular": "^1.5.0",
