--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,15 +14,16 @@
     "@angular/animations": "~7.0.0",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
+    "@angular/core": "^7.0.4",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@auth0/angular-jwt": "^2.1.0",
+    "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^6.1.2",
-    "@ngrx/store": "^2.2.3",
+    "@ngrx/store": "^7.0.0",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
     "apollo-cache-inmemory": "^1.3.2",
@@ -32,8 +33,10 @@
     "font-awesome": "^4.7.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
+    "ngrx-actions": "^4.0.0",
     "node-sass": "^4.11.0",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
