--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^6.1.2",
     "@ngrx/store": "^7.0.0",
+    "@ngrx/store-devtools": "^7.0.0",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
     "apollo-cache-inmemory": "^1.3.2",
