--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "font-awesome": "^4.7.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.10.0",
+    "jspdf": "^1.5.3",
     "ngrx-actions": "^4.0.0",
     "ngx-infinite-scroll": "^7.0.1",
     "node-sass": "^4.11.0",
