--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@ngrx/effects": "^6.1.2",
     "@ngrx/store": "^7.0.0",
     "@ngrx/store-devtools": "^7.0.0",
+    "@ngx-translate/core": "^11.0.1",
     "angularx-social-login": "^1.2.6",
     "apollo-angular": "^1.5.0",
     "apollo-angular-link-http": "^1.3.1",
